# macrelay

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY_REPORT.md
.github/workflows/: ci.yml  release.yml
assets/: macrelay.icns
crates/macapp-core/: Cargo.toml
crates/macapp-core/src/: registry.rs
crates/macapp-core/src/macos/: applescript.rs  eventkit.rs
crates/macapp-server/: Cargo.toml
crates/macapp-server/src/: main.rs
crates/macrelay-core/: Cargo.toml
crates/macrelay-core/src/: lib.rs  permissions.rs  registry.rs
crates/macrelay-core/src/macos/: applescript.rs  escape.rs  eventkit.rs  mod.rs
crates/macrelay-core/src/services/: mod.rs  permissions_status.rs
crates/macrelay-core/src/services/calendar/: mod.rs
crates/macrelay-core/src/services/contacts/: mod.rs
crates/macrelay-core/src/services/location/: mod.rs
crates/macrelay-core/src/services/mail/: mod.rs
crates/macrelay-core/src/services/maps/: mod.rs
crates/macrelay-core/src/services/messages/: mod.rs
crates/macrelay-core/src/services/notes/: mod.rs
crates/macrelay-core/src/services/reminders/: mod.rs
crates/macrelay-core/src/services/shortcuts/: mod.rs
crates/macrelay-core/src/services/stickies/: mod.rs
crates/macrelay-core/src/services/ui_controller/: mod.rs
crates/macrelay-core/src/services/ui_viewer/: mod.rs
crates/macrelay-core/tests/: calendar_integration.rs  contacts_integration.rs  mail_integration.rs  messages_integration.rs  notes_integration.rs  reminders_integration.rs  smoke_all_tools.rs
crates/macrelay-core/tests/common/: mod.rs
crates/macrelay-menubar/: Cargo.toml
crates/macrelay-menubar/src/: config.rs  launchagent.rs  main.rs  process.rs  uninstall.rs
crates/macrelay-server/: Cargo.toml
crates/macrelay-server/src/: main.rs
crates/macuse-core/: Cargo.toml  build.rs
crates/macuse-core/src/macos/: eventkit.rs  mod.rs
crates/macuse-core/src/services/: mod.rs  permissions_status.rs
crates/macuse-core/src/services/calendar/: mod.rs
crates/macuse-core/src/services/contacts/: mod.rs
crates/macuse-core/src/services/reminders/: mod.rs
crates/macuse-server/: Cargo.toml
crates/macuse-server/src/: main.rs
docs/: FUTURE.md  PERFORMANCE.md  PRD.md  TESTING.md
homebrew/: macrelay-cask.rb  macrelay.rb
mcpb/: manifest.json
scripts/: build-app.sh  generate_icons.py  setup-claude.sh  uninstall.sh
