[workspace]
resolver = "2"
members = [
    "crates/macrelay-core",
    "crates/macrelay-server",
    "crates/macrelay-menubar",
]

[workspace.package]
version = "1.2.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/drbarq/macrelay"

[workspace.dependencies]
macrelay-core = { path = "crates/macrelay-core" }
rmcp = { version = "1.4", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
