[package]
name = "macapp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "macapp-server"
path = "src/main.rs"

[dependencies]
macapp-core = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
