[package]
name = "macuse-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "macuse-server"
path = "src/main.rs"

[dependencies]
macuse-core = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
